# mc_jsim

./: .gitignore  CMakeLists.txt  README.md  build.sh  clang-toolchain.cmake  requirements.txt
data/: create_ast_json.sh
data/scripts/: similarity.py  temp2.py  temp3.py  temp6.py  temp7_550.py  temp7_550_1.py  temp8.py
data/src/: README.md  main.cpp  main1.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp
data/tree/: extract_index.py  main2_index.txt  main7_index.txt  main_index.txt
data/tree/tmp/: generate_json.py  generate_json_distribution.py  generate_json_from_index.py  generate_json_index.py  generate_tokens.py
report/: idea.md  plot.py  reference.bib  sample-sigconf.tex
src/: final.py  temp.py  temp1.py  temp4.py  temp5.py  temp5_1.py
